Small fixes on SecurityConfig.java, allowed all header and modified set allowed origins front url